<resources>
    <string name="app_name">HaveYouMet</string>
    <string name="error_msg_fatal">An unexpected error occurred</string>
    <string name="btn_close">Close</string>
    <string name="title_screen_sign_in">Sign In</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_try_again">Try Again</string>
    <string name="hint_repassword">Re-enter Password</string>
    <string name="btn_register">Register</string>
    <string name="title_screen_register">Register</string>
    <string name="btn_sign_in_google">Sign In with Google</string>
    <string name="title_screen_album_list">Albums</string>
    <string name="title_screen_album_detail">Album Details</string>
</resources>
